tests/NormalTests/paczka1/fuzzy1/27373562.err
Error in line 2: 5bnYl S819 24,8
Error in line 16: Nva A636 35,4
Error in line 21: Nva S819 30,2
Error in line 29: Nva A636 4,4
